--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
-requests==2.32.3
-pyTelegramBotAPI==4.22.1
+aiogram==3.13.1
+selenium==4.25.0
 beautifulsoup4==4.12.3
+undetected-chromedriver==3.5.5
+asyncio
+lxml==5.3.0
+webdriver-manager==4.0.2
